# beevr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: beever_path.cmake  compile.cmake
src/: CMakeLists.txt  main.c
src/include/: CMakeLists.txt  bstring.c  bstring.h  cli_parse.c  cli_parse.h
